All 3 services are running to production grade

--- a/order_service/pom.xml
+++ b/order_service/pom.xml
@@ -32,6 +32,13 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+			<!--<version>3.5.3</version>-->
+		</dependency>
+
+
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>42.7.7</version>
