--- a/stock_service/pom.xml
+++ b/stock_service/pom.xml
@@ -33,6 +33,13 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+			<!--<version>3.5.3</version>-->
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 			<version>3.5.3</version>
 		</dependency>
